--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
         },
         onEachFeature: function(feature, layer) {
           layer.on('click', function(e) {
-            alert("Zone Name: " + feature.properties.NAME);
+            alert("Zone Name: " + feature.properties.TYPE_OF_WA);
           });
         }
       }).addTo(map);
@@ -89,4 +89,5 @@ L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
 </body>
 
 </html>
+
 
