--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@ locateBtn.onAdd = function (map) {
 locateBtn.addTo(map);
     
 // إضافة الخريطة الأساسية
-    L.tileLayer(basemapUrl, {
-        attribution:
-        '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
-        subdomains: 'abcd',
-        maxZoom: 20
-      }).addTo(map);
+L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
+  attribution:
+    '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+  subdomains: 'abcd',
+  maxZoom: 20
+}).addTo(map);
 
 
 // use jquery to load GeoJSON data
@@ -166,6 +166,7 @@ locateBtn.addTo(map);
 </body>
 
 </html>
+
 
 
 
