--- a/index.html
+++ b/index.html
@@ -104,13 +104,12 @@ locateBtn.onAdd = function (map) {
 // إضافة الزر إلى الخريطة
 locateBtn.addTo(map);
     
-// إضافة الخريطة الأساسية
-L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
-  attribution:
-    '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+// add a base map to the map
+L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+  attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
   subdomains: 'abcd',
   maxZoom: 20
-}).addTo(map);
+      }).addTo(map);
 
 
 // use jquery to load GeoJSON data
@@ -166,6 +165,7 @@ L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
 </body>
 
 </html>
+
 
 
 
