--- a/index.html
+++ b/index.html
@@ -27,11 +27,47 @@
       top: 0px;
       bottom: 0;
     }
+
+    /* شاشة التحميل */
+    #loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #1a1a1a; /* خلفية غامقة */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-family: sans-serif;
+      z-index: 9999;
+      opacity: 1;
+      transition: opacity 1s ease;
+    }
+
+    #loading-screen img {
+      width: 150px;
+      margin-bottom: 15px;
+    }
+    
+    #loading-screen.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+
   </style>
 </head>
 
 <body>
   <!-- the map -->
+  <!-- شاشة تحميل بسيطة بشعار بيرزيت -->
+<div id="loading-screen">
+  <img src="birzeit.png" alt="Birzeit University Logo">
+  <p>Loading Ramallah Map...</p>
+</div>
+
   <div id="map"></div>
 
   <!-- Add a link to the Leaflet JavaScript library so you can reference it for building your map -->
@@ -161,10 +197,20 @@ L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
     // Add both layers to the map by default
     zonesLayer.addTo(map);
     wasteContainersLayer.addTo(map);
+
+        map.whenReady(function () {
+      const loading = document.getElementById("loading-screen");
+      loading.classList.add("fade-out");
+      setTimeout(() => {
+        loading.style.display = "none";
+      }, 1000);
+    });
+
   </script>
 </body>
 
 </html>
+
 
 
 
