--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
         pointToLayer: function (feature, latlng) {
           return L.circleMarker(latlng, {
             radius: 5,
-            fillColor: "orange",
-            color: "orange",
+            fillColor: "red",
+            color: "red",
             weight: 1,
             opacity: 1,
             fillOpacity: 0.8
@@ -194,4 +194,5 @@
 
 </body>
 </html>
+
 
