--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
       zonesLayer = L.geoJson(RZ, {
         style: function (feature) {
           return {
-            fillColor: "yellow",
+            fillColor: "red",
             fillOpacity: 0.3,
-            color: "yellow",
+            color: "red",
             weight: 1.0,
             opacity: 0.7
           };
