--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <title>Ramallah Waste Containers</title>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.fullscreen/Control.FullScreen.css" />
 
   <style>
     body {
-      margin: 0px;
+      margin: 0;
       height: 100%;
       width: 100%;
+      background-color: #1a1a1a;
     }
 
-    /* style the map */
     #map {
       position: absolute;
       width: 100%;
-      top: 0px;
-      bottom: 0;
+      height: 100%;
       opacity: 0;
-      transition: opacity 1s ease-in; /* Fade-in للخريطة بعد تحميلها */
+      transition: opacity 2s ease-in;
     }
 
     /* شاشة التحميل */
@@ -44,7 +43,7 @@
     }
 
     #loading-screen img {
-      width: 150px;
+      width: 140px;
       margin-bottom: 15px;
     }
 
@@ -52,147 +51,194 @@
       opacity: 0;
       pointer-events: none;
     }
+
+    /* أيقونات التحكم على الطرف */
+    .custom-controls {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      z-index: 1000;
+    }
+
+    .custom-btn {
+      background: white;
+      border: none;
+      border-radius: 8px;
+      padding: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+
+    .custom-btn:hover {
+      transform: scale(1.1);
+      background: #ffefef;
+    }
+
+    /* سهم الشمال */
+    #north-arrow {
+      position: absolute;
+      bottom: 15px;
+      right: 15px;
+      z-index: 1000;
+      width: 60px;
+      opacity: 0.8;
+    }
   </style>
 </head>
 
 <body>
 
-  <!-- شاشة تحميل بسيطة بشعار بيرزيت -->
   <div id="loading-screen">
     <img src="birzeit.png" alt="Birzeit University Logo">
-    <p>Loading Ramallah Map...</p>
+    <p>Loading Interactive Map...</p>
   </div>
 
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <img id="north-arrow" src="https://upload.wikimedia.org/wikipedia/commons/8/88/Compass_rose_simple.svg" alt="North Arrow">
+
+  <div class="custom-controls">
+    <button class="custom-btn" id="toggle-theme">🌞 / 🌙</button>
+    <button class="custom-btn" id="toggle-heat">🔥 Density</button>
+    <button class="custom-btn" id="locate-me">📍</button>
+  </div>
+
+  <!-- مكتبات -->
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script>
-    // إعدادات الخريطة
-    const mapOptions = {
-      zoomSnap: 0.5,
+    const map = L.map("map", {
       center: [31.9045, 35.2045],
-      zoom: 17.5,
-    };
-    const map = L.map("map", mapOptions);
+      zoom: 15,
+      zoomSnap: 0.25
+    });
 
-    // زر تحديد الموقع
-    const locateBtn = L.control({ position: 'topleft' });
-    locateBtn.onAdd = function (map) {
-      const btn = L.DomUtil.create('button', 'locate-button');
-      btn.innerHTML = '📍 Locate Me';
-      btn.style.backgroundColor = '#fff';
-      btn.style.padding = '6px 10px';
-      btn.style.border = '2px solid #555';
-      btn.style.borderRadius = '8px';
-      btn.style.cursor = 'pointer';
-      btn.style.boxShadow = '0 1px 5px rgba(0,0,0,0.4)';
-      btn.title = 'Find your current location';
+    // إعداد الخلفيات (ليل ونهار)
+    const dayTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; OpenStreetMap contributors'
+    });
 
-      btn.onclick = function () {
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(
-            function (position) {
-              const lat = position.coords.latitude;
-              const lon = position.coords.longitude;
-              const userMarker = L.circleMarker([lat, lon], {
-                radius: 8,
-                fillColor: 'blue',
-                color: '#fff',
-                weight: 2,
-                opacity: 1,
-                fillOpacity: 0.9
-              }).addTo(map);
-              map.setView([lat, lon], 17);
-              userMarker.bindPopup("📍 You are here!").openPopup();
-            },
-            function () {
-              alert("⚠️ لم يتم السماح بالوصول إلى الموقع.");
-            }
-          );
-        } else {
-          alert("❌ المتصفح لا يدعم تحديد الموقع الجغرافي.");
-        }
-      };
-      return btn;
-    };
-    locateBtn.addTo(map);
+    const nightTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      maxZoom: 20,
+      attribution: '&copy; CARTO'
+    });
 
-    // الخريطة الأساسية
-    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
-      subdomains: 'abcd',
-      maxZoom: 20
-    }).addTo(map);
+    // تحديد الوضع حسب الوقت
+    const hour = new Date().getHours();
+    let currentTheme = (hour >= 6 && hour < 18) ? "day" : "night";
+    (currentTheme === "day" ? dayTiles : nightTiles).addTo(map);
 
-    // تعريف المتغيرات للطبقات
-    let wasteContainersLayer;
-    let zonesLayer;
+    // تحميل طبقات
+    let wasteLayer, heatLayer, zoneLayer;
 
-    // تحميل الحاويات
-    $.getJSON("wasteContainer.json", function (WC) {
-      wasteContainersLayer = L.geoJson(WC, {
+    // أيقونة جميلة للحاويات
+    const binIcon = L.icon({
+      iconUrl: 'https://cdn-icons-png.flaticon.com/512/3097/3097144.png',
+      iconSize: [28, 28],
+      iconAnchor: [14, 14],
+      popupAnchor: [0, -14]
+    });
+
+    $.getJSON("wasteContainer.json", function (data) {
+      let heatPoints = [];
+      wasteLayer = L.geoJson(data, {
         pointToLayer: function (feature, latlng) {
-          return L.circleMarker(latlng, {
-            radius: 5,
-            fillColor: "red",
-            color: "red",
-            weight: 1,
-            opacity: 1,
-            fillOpacity: 0.8
-          });
+          heatPoints.push([latlng.lat, latlng.lng]);
+          return L.marker(latlng, { icon: binIcon })
+            .bindPopup("<b>Waste Container</b><br>Lat: " + latlng.lat.toFixed(4) + "<br>Lon: " + latlng.lng.toFixed(4));
         }
       }).addTo(map);
-      checkAllLayersLoaded();
+
+      // خريطة الكثافة
+      heatLayer = L.heatLayer(heatPoints, {
+        radius: 25,
+        blur: 15,
+        maxZoom: 17,
+        gradient: {
+          0.2: 'blue',
+          0.5: 'lime',
+          0.8: 'red'
+        }
+      });
+
+      checkLoaded();
     });
 
-    // تحميل المناطق
-    $.getJSON("RamallahZones.json", function (RZ) {
-      zonesLayer = L.geoJson(RZ, {
-        style: function (feature) {
-          return {
-            fillColor: "red",
-            fillOpacity: 0.3,
-            color: "red",
-            weight: 1.0,
-            opacity: 0.7
-          };
-        },
-        onEachFeature: function (feature, layer) {
-          layer.on('click', function (e) {
-            alert("Zone: " + feature.properties.NAME_ENGLI + "\nMAIL_CODE: " + feature.properties.MAIL_CODE);
-          });
+    $.getJSON("RamallahZones.json", function (zones) {
+      zoneLayer = L.geoJson(zones, {
+        style: {
+          color: "yellow",
+          weight: 1,
+          fillOpacity: 0.2
         }
       }).addTo(map);
-      checkAllLayersLoaded();
+      checkLoaded();
     });
 
-    // التأكد من تحميل كل الطبقات قبل إزالة شاشة التحميل
-    function checkAllLayersLoaded() {
-      if (wasteContainersLayer && zonesLayer) {
-        // إضافة التحكم بالطبقات
-        const baseLayers = {};
-        const overlays = {
-          "Zones": zonesLayer,
-          "Waste Containers": wasteContainersLayer
-        };
-        L.control.layers(baseLayers, overlays).addTo(map);
+    // عند تحميل كل الطبقات
+    function checkLoaded() {
+      if (wasteLayer && zoneLayer) {
+        L.control.scale({ metric: true }).addTo(map); // مقياس رسم
 
-        // عرض الخريطة تدريجيًا
         document.getElementById("map").style.opacity = 1;
-
-        // إخفاء شاشة التحميل
         const loading = document.getElementById("loading-screen");
         loading.classList.add("fade-out");
-        setTimeout(() => {
-          loading.style.display = "none";
-        }, 5000);
+        setTimeout(() => loading.style.display = "none", 1500);
       }
     }
-  </script>
 
+    // زر تبديل الليل والنهار
+    document.getElementById("toggle-theme").onclick = function () {
+      if (currentTheme === "day") {
+        map.removeLayer(dayTiles);
+        nightTiles.addTo(map);
+        currentTheme = "night";
+      } else {
+        map.removeLayer(nightTiles);
+        dayTiles.addTo(map);
+        currentTheme = "day";
+      }
+    };
+
+    // زر تفعيل خريطة الكثافة
+    let heatVisible = false;
+    document.getElementById("toggle-heat").onclick = function () {
+      if (!heatVisible) {
+        map.addLayer(heatLayer);
+        heatVisible = true;
+      } else {
+        map.removeLayer(heatLayer);
+        heatVisible = false;
+      }
+    };
+
+    // زر تحديد الموقع
+    document.getElementById("locate-me").onclick = function () {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(pos => {
+          const lat = pos.coords.latitude;
+          const lon = pos.coords.longitude;
+          const userMarker = L.circleMarker([lat, lon], {
+            radius: 8,
+            fillColor: 'blue',
+            color: '#fff',
+            weight: 2,
+            fillOpacity: 0.9
+          }).addTo(map);
+          userMarker.bindPopup("📍 You are here").openPopup();
+          map.setView([lat, lon], 17);
+        });
+      } else {
+        alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي");
+      }
+    };
+  </script>
 </body>
 </html>
-
-
