--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <title>Ramallah Waste Containers</title>
 
-  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
 
   <style>
@@ -85,66 +84,50 @@
       right: 15px;
       z-index: 1000;
       width: 60px;
+      height: 60px;
       opacity: 0.8;
     }
   </style>
 </head>
 <body>
 
-  <!-- شاشة التحميل -->
   <div id="loading-screen">
     <img src="birzeit.png" alt="Birzeit University Logo">
     <p>Loading Interactive Map...</p>
   </div>
 
-  <!-- الخريطة -->
   <div id="map"></div>
 
-  <!-- سهم الشمال -->
-  <img id="north-arrow" src="https://upload.wikimedia.org/wikipedia/commons/8/88/Compass_rose_simple.svg" alt="North Arrow">
+  <!-- سهم الشمال: استخدام رابط شفاف -->
+  <img id="north-arrow" src="https://upload.wikimedia.org/wikipedia/commons/3/3c/North_arrow_simple.png" alt="North Arrow">
 
-  <!-- أيقونات التحكم -->
   <div class="custom-controls">
     <button class="custom-btn" id="toggle-theme">🌞 / 🌙</button>
     <button class="custom-btn" id="toggle-heat">🔥 Density</button>
     <button class="custom-btn" id="locate-me">📍</button>
   </div>
 
-  <!-- مكتبات -->
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script>
-    // إعداد الخريطة
-    const map = L.map("map", {
-      center: [31.9045, 35.2045],
-      zoom: 15,
-      zoomSnap: 0.25
-    });
+    const map = L.map("map", { center: [31.9045, 35.2045], zoom: 15, zoomSnap: 0.25 });
 
     // الخلفيات
-    const dayTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '&copy; OpenStreetMap contributors'
-    });
-    const nightTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-      maxZoom: 20,
-      attribution: '&copy; CARTO'
-    });
-
+    const dayTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 19, attribution: '&copy; OpenStreetMap contributors' });
+    const nightTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', { maxZoom: 20, attribution: '&copy; CARTO' });
     let currentTheme = (new Date().getHours() >= 6 && new Date().getHours() < 18) ? "day" : "night";
     (currentTheme === "day" ? dayTiles : nightTiles).addTo(map);
 
-    // متغيرات الطبقات
     let wasteLayer, heatLayer, zoneLayer;
 
-    // أيقونة الحاويات
+    // أيقونة الحاويات القديمة (كما كانت قبل)
     const binIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/3097/3097144.png',
+      iconUrl: 'https://cdn-icons-png.flaticon.com/512/565/565491.png', // أيقونة سلة القمامة
       iconSize: [28, 28],
-      iconAnchor: [14, 14],
-      popupAnchor: [0, -14]
+      iconAnchor: [14, 28],
+      popupAnchor: [0, -28]
     });
 
     // تحميل الحاويات
@@ -158,29 +141,25 @@
         }
       }).addTo(map);
 
-      // Heat / Density Layer
+      // Heat / Density
       heatLayer = L.heatLayer(heatPoints, {
         radius: 25,
         blur: 15,
         maxZoom: 17,
-        gradient: { 0.2: 'blue', 0.5: 'lime', 0.8: 'red' }
+        gradient: {0.2:'blue',0.5:'lime',0.8:'red'}
       });
-
       checkLoaded();
     });
 
     // تحميل المناطق
     $.getJSON("RamallahZones.json", function(zones) {
-      zoneLayer = L.geoJson(zones, {
-        style: { color: "yellow", weight: 1, fillOpacity: 0.2 }
-      }).addTo(map);
+      zoneLayer = L.geoJson(zones, { style: { color:"yellow", weight:1, fillOpacity:0.2 } }).addTo(map);
       checkLoaded();
     });
 
-    // التأكد من تحميل كل الطبقات
     function checkLoaded() {
       if (wasteLayer && zoneLayer) {
-        L.control.scale({ metric: true }).addTo(map); // مقياس الرسم
+        L.control.scale({ metric: true }).addTo(map);
         document.getElementById("map").style.opacity = 1;
         const loading = document.getElementById("loading-screen");
         loading.classList.add("fade-out");
@@ -188,50 +167,29 @@
       }
     }
 
-    // تبديل الليل / النهار
+    // تبديل الليل/النهار
     document.getElementById("toggle-theme").onclick = function() {
-      if (currentTheme === "day") {
-        map.removeLayer(dayTiles);
-        nightTiles.addTo(map);
-        currentTheme = "night";
-      } else {
-        map.removeLayer(nightTiles);
-        dayTiles.addTo(map);
-        currentTheme = "day";
-      }
+      if(currentTheme==="day"){ map.removeLayer(dayTiles); nightTiles.addTo(map); currentTheme="night"; }
+      else{ map.removeLayer(nightTiles); dayTiles.addTo(map); currentTheme="day"; }
     };
 
-    // تفعيل Heat / Density
+    // تفعيل/إيقاف Heat map
     let heatVisible = false;
     document.getElementById("toggle-heat").onclick = function() {
-      if (!heatVisible) {
-        map.addLayer(heatLayer);
-        heatVisible = true;
-      } else {
-        map.removeLayer(heatLayer);
-        heatVisible = false;
-      }
+      if(!heatVisible){ map.addLayer(heatLayer); heatVisible=true; }
+      else{ map.removeLayer(heatLayer); heatVisible=false; }
     };
 
     // تحديد الموقع
     document.getElementById("locate-me").onclick = function() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(pos => {
-          const lat = pos.coords.latitude;
-          const lon = pos.coords.longitude;
-          const userMarker = L.circleMarker([lat, lon], {
-            radius: 8,
-            fillColor: 'blue',
-            color: '#fff',
-            weight: 2,
-            fillOpacity: 0.9
-          }).addTo(map);
+      if(navigator.geolocation){
+        navigator.geolocation.getCurrentPosition(pos=>{
+          const lat=pos.coords.latitude, lon=pos.coords.longitude;
+          const userMarker=L.circleMarker([lat,lon],{radius:8,fillColor:'blue',color:'#fff',weight:2,fillOpacity:0.9}).addTo(map);
           userMarker.bindPopup("📍 You are here").openPopup();
-          map.setView([lat, lon], 17);
+          map.setView([lat,lon],17);
         });
-      } else {
-        alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي");
-      }
+      }else{ alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي"); }
     };
   </script>
 </body>
