--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       pointer-events: none;
     }
 
-    /* أيقونات التحكم */
+    /* أزرار التحكم */
     .custom-controls {
       position: absolute;
       top: 10px;
@@ -84,11 +84,11 @@
       right: 15px;
       z-index: 1000;
       width: 60px;
-      height: 60px;
-      opacity: 0.8;
+      opacity: 0.9;
     }
   </style>
 </head>
+
 <body>
 
   <div id="loading-screen">
@@ -98,106 +98,149 @@
 
   <div id="map"></div>
 
-  <!-- سهم الشمال: استخدام رابط شفاف -->
-  <img id="north-arrow" src="https://upload.wikimedia.org/wikipedia/commons/3/3c/North_arrow_simple.png" alt="North Arrow">
+  <!-- سهم الشمال -->
+  <img id="north-arrow" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/North_arrow.svg/512px-North_arrow.svg.png" alt="North Arrow">
 
+  <!-- أزرار التحكم -->
   <div class="custom-controls">
     <button class="custom-btn" id="toggle-theme">🌞 / 🌙</button>
     <button class="custom-btn" id="toggle-heat">🔥 Density</button>
     <button class="custom-btn" id="locate-me">📍</button>
   </div>
 
+  <!-- مكتبات -->
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script>
-    const map = L.map("map", { center: [31.9045, 35.2045], zoom: 15, zoomSnap: 0.25 });
-
-    // الخلفيات
-    const dayTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 19, attribution: '&copy; OpenStreetMap contributors' });
-    const nightTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', { maxZoom: 20, attribution: '&copy; CARTO' });
-    let currentTheme = (new Date().getHours() >= 6 && new Date().getHours() < 18) ? "day" : "night";
-    (currentTheme === "day" ? dayTiles : nightTiles).addTo(map);
-
-    let wasteLayer, heatLayer, zoneLayer;
-
-    // أيقونة الحاويات القديمة (كما كانت قبل)
-    const binIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/565/565491.png', // أيقونة سلة القمامة
-      iconSize: [28, 28],
-      iconAnchor: [14, 28],
-      popupAnchor: [0, -28]
+    const map = L.map("map", {
+      center: [31.9045, 35.2045],
+      zoom: 15,
+      zoomSnap: 0.25
     });
 
-    // تحميل الحاويات
-$.getJSON("wasteContainer.json", function(data) {
-  wasteLayer = L.geoJson(data, {
-    pointToLayer: function(feature, latlng) {
-      return L.circleMarker(latlng, {
-        radius: 8,            // حجم الدائرة
-        fillColor: "red",     // لون التعبئة
-        color: "#fff",        // لون الحدود
-        weight: 2,            // سماكة الحدود
-        opacity: 1,           // شفافية الحدود
-        fillOpacity: 0.8      // شفافية التعبئة
-      }).bindPopup("<b>Waste Container</b><br>Lat: " + latlng.lat.toFixed(4) + "<br>Lon: " + latlng.lng.toFixed(4));
-    }
-  }).addTo(map);
-});
+    // إعداد الخلفيات (ليل ونهار)
+    const dayTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; OpenStreetMap contributors'
+    });
 
+    const nightTiles = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      maxZoom: 20,
+      attribution: '&copy; CARTO'
+    });
 
-      // Heat / Density
+    // اختيار الوضع حسب الوقت
+    const hour = new Date().getHours();
+    let currentTheme = (hour >= 6 && hour < 18) ? "day" : "night";
+    (currentTheme === "day" ? dayTiles : nightTiles).addTo(map);
+
+    // تحميل الطبقات
+    let wasteLayer, heatLayer, zoneLayer;
+
+    $.getJSON("wasteContainer.json", function(data) {
+      let heatPoints = [];
+
+      wasteLayer = L.geoJson(data, {
+        pointToLayer: function(feature, latlng) {
+          heatPoints.push([latlng.lat, latlng.lng]);
+
+          // دائرة بدل أيقونة
+          return L.circleMarker(latlng, {
+            radius: 7,
+            fillColor: "red",
+            color: "#fff",
+            weight: 2,
+            opacity: 1,
+            fillOpacity: 0.85
+          }).bindPopup("<b>Waste Container</b><br>Lat: " + latlng.lat.toFixed(4) + "<br>Lon: " + latlng.lng.toFixed(4));
+        }
+      }).addTo(map);
+
+      // خريطة الكثافة
       heatLayer = L.heatLayer(heatPoints, {
         radius: 25,
         blur: 15,
         maxZoom: 17,
-        gradient: {0.2:'blue',0.5:'lime',0.8:'red'}
+        gradient: {
+          0.2: 'blue',
+          0.5: 'lime',
+          0.8: 'red'
+        }
       });
+
       checkLoaded();
     });
 
-    // تحميل المناطق
     $.getJSON("RamallahZones.json", function(zones) {
-      zoneLayer = L.geoJson(zones, { style: { color:"yellow", weight:1, fillOpacity:0.2 } }).addTo(map);
+      zoneLayer = L.geoJson(zones, {
+        style: {
+          color: "yellow",
+          weight: 1,
+          fillOpacity: 0.2
+        }
+      }).addTo(map);
       checkLoaded();
     });
 
+    // التأكد من تحميل الطبقات
     function checkLoaded() {
       if (wasteLayer && zoneLayer) {
         L.control.scale({ metric: true }).addTo(map);
         document.getElementById("map").style.opacity = 1;
+
         const loading = document.getElementById("loading-screen");
         loading.classList.add("fade-out");
         setTimeout(() => loading.style.display = "none", 1500);
       }
     }
 
-    // تبديل الليل/النهار
+    // زر تبديل الليل والنهار
     document.getElementById("toggle-theme").onclick = function() {
-      if(currentTheme==="day"){ map.removeLayer(dayTiles); nightTiles.addTo(map); currentTheme="night"; }
-      else{ map.removeLayer(nightTiles); dayTiles.addTo(map); currentTheme="day"; }
+      if (currentTheme === "day") {
+        map.removeLayer(dayTiles);
+        nightTiles.addTo(map);
+        currentTheme = "night";
+      } else {
+        map.removeLayer(nightTiles);
+        dayTiles.addTo(map);
+        currentTheme = "day";
+      }
     };
 
-    // تفعيل/إيقاف Heat map
+    // زر تفعيل خريطة الكثافة
     let heatVisible = false;
     document.getElementById("toggle-heat").onclick = function() {
-      if(!heatVisible){ map.addLayer(heatLayer); heatVisible=true; }
-      else{ map.removeLayer(heatLayer); heatVisible=false; }
+      if (!heatVisible) {
+        map.addLayer(heatLayer);
+        heatVisible = true;
+      } else {
+        map.removeLayer(heatLayer);
+        heatVisible = false;
+      }
     };
 
-    // تحديد الموقع
+    // زر تحديد الموقع
     document.getElementById("locate-me").onclick = function() {
-      if(navigator.geolocation){
-        navigator.geolocation.getCurrentPosition(pos=>{
-          const lat=pos.coords.latitude, lon=pos.coords.longitude;
-          const userMarker=L.circleMarker([lat,lon],{radius:8,fillColor:'blue',color:'#fff',weight:2,fillOpacity:0.9}).addTo(map);
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(pos => {
+          const lat = pos.coords.latitude;
+          const lon = pos.coords.longitude;
+          const userMarker = L.circleMarker([lat, lon], {
+            radius: 8,
+            fillColor: 'blue',
+            color: '#fff',
+            weight: 2,
+            fillOpacity: 0.9
+          }).addTo(map);
           userMarker.bindPopup("📍 You are here").openPopup();
-          map.setView([lat,lon],17);
+          map.setView([lat, lon], 17);
         });
-      }else{ alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي"); }
+      } else {
+        alert("⚠️ المتصفح لا يدعم تحديد الموقع الجغرافي");
+      }
     };
   </script>
 </body>
 </html>
-
